--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -3,10 +3,10 @@ name: "Terraform Infrastructure Deployment"
 on:
   push:
     branches:
-      - lab_2
+      - loc-dev
   pull_request:
     branches:
-      - lab_2
+      - loc-dev
 
 permissions:
   contents: read
@@ -72,8 +72,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -input=false
-        continue-on-error: true
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/lab_2' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/loc-dev' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
